# callCenterSimulation

./: .gitignore  Dockerfile  README.md  init.sql  pyproject.toml
results/: 3.csv  5.csv  7.csv
src/callcentersimulation/: main.py  runserver.py
src/callcentersimulation/application/: create_agent_use_case.py  create_concurrent_list_use_case.py  create_ticket_use_case.py  get_specific_number_available_agents_use_case.py  get_tickets_by_execution_id_use_case.py  process_ticket_use_case.py  process_tickets_use_case.py  test.py  update_tickets_use_case.py
src/callcentersimulation/domain/model/: agent.py  concurrent_list.py  ticket.py
src/callcentersimulation/domain/ports/: agent_repository.py  execution_repository.py  ticket_repository.py
src/callcentersimulation/infrastructure/: dependencies.py
src/callcentersimulation/infrastructure/api/dto/: agent_dto.py
src/callcentersimulation/infrastructure/api/endpoints/: agent.py  agents.py  tickets.py
src/callcentersimulation/infrastructure/persistence/adapters/: sql_agent_repository.py  sql_ticket_repository.py
src/callcentersimulation/infrastructure/persistence/conf/: database.py
src/callcentersimulation/infrastructure/persistence/records/: agent_record.py  ticket_record.py
src/callcentersimulation/infrastructure/utils/: csv_ticket_processor.py  csv_ticket_reporter.py
